# caos_seminars

sem1/: .gdb_history  README.md  bomb.sh  checklist.txt  gen_log.py  hackme  hackme.cpp  log.txt
sem10/: 0.c  a.out  compile.sh  read_numbers.c  winapi.c
sem12/: .0.c.swp  0.c  in  prog
sem2/: a.out  challenge.c  hack3.c  heap.c  limits.c  main.c  task1.c  task2.c  task3.c  x.c
sem3/: CMakeLists.txt  module.h  sample1.c  sample2.c  sample3.c  script.py
sem4/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  exp.py  inf01-0.c  inf02-0.c  sample1.c  sample2.c
sem5/: .gdb_history  a.out  asm_prog  backtrace.c  complile.sh  main.c  main.s  prog  test.S  test_bt
sem6/: a.out  main.c  prog.S
sem7/: a.out  main.c  prog.S  test.c
sem8/: 387.S  a.out  main.c  sse.S  sse.c  vector_sum.S
sem9/: .gdb_history  0.c  a.out  copy  nasm  nasm.S  syscall86-32-sem.S  syscall86-32.S
test/: a.out  main.c  sum.S
